# python

./: .gitignore  3n_1.py  Cancer_AI.ipynb  Folium_maps.ipynb  OpenCV2.ipynb  README.md  Trey_Hunter.ipynb  async_twtim.py  async_twtim_tasks.py  automate_with_Excel.py  catalan_conjecture.py  comma_equals.py  dataclass_api_ex1.py  dict_chainmap.py  dict_counter.py  dict_defaultdict.py  dict_ordered_dict.py  exception.py  exception1.py  function2.py  function3.py  functions.py  ir.out  kite_decs.py  line_name.py  lines.txt  linuxcbt_python1.py  lru_cache_cache.py  lru_cache_real_py_strategies.py  mCoding_dataclass.py  metclasses_1.py  n.py  nvim_plugin.py  prime_finder.py  python_prac1.py  python_sample.py  raven.txt  recurssion_real.py  regex.py  regex1.py  (+3 more)
.ipynb_checkpoints/: Folium_maps-checkpoint.ipynb
150_py/: 2_3_Age_in_5.py  2_4_Convertor_Calc.py  2_Area_box.py
ArjanCodes/: context_manager1.py  f_strings_tips.py  luhn.py  type_driven_development.py
Auto_cookbook/: recipe_format_strings_step1.py
Gapi/: Google.py  gcal_try.py
PYScript/: 1.html
SQLAlchemy/: async_stribny.py
Tech_with_TIM/: iter_magic.py
design_patterns/: abstract_factory_method.py  factory_pattern.py
fluent_py_2nd/: seq.py
functools_prac.py/: 1_caching.py
mcoding/auto_test/: pyproject.toml  setup.cfg
mcoding/auto_test/src/slapping/: slap_that_like_button.py
mcoding/auto_test/src/slapping.egg-info/: PKG-INFO  SOURCES.txt
notion_api/: api_key_AutoInt  book_sync.py  cred_google.py  cred_google1.py  credentials.json  db.json  db1.json  n.py  notion_Gcal_two.py  notion_client.py
(+25 files in other folders)
