[metadata]
name = slapping
description = slap that like button
author = James Murphy
license = MIT
license_file = LICENSE
platform = unix, linux, osx
classifiers  =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only


[options]
packages = 
    slapping
install_requires = 
    requests>=2
python_requires = >=3.6
package_dir =
   =src
zip_safe = no
